# rust-ftp-client

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  notes.md
src/: client.rs  main.rs  response.rs
